python/tests/gold/redirecttestsinvalidsecret/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "secret": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v1\nkind: Module\nname: tls\nambassador_id: redirecttestsinvalidsecret\nconfig:\n  server:\n    enabled: True\n    secret: does-not-exist-secret\n    redirect_cleartext_from: 8080\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v1\\nkind: Module\\nname: tls\\nambassador_id: redirecttestsinvalidsecret\\nconfig:\\n  server:\\n    enabled: True\\n    secret: does-not-exist-secret\\n    redirect_cleartext_from: 8080\\n\"},\"labels\":{\"app.kubernetes.io/component\":\"ambassador-service\",\"kat-ambassador-id\":\"redi [...]
                    },
                    "creationTimestamp": "2020-01-10T16:55:42Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "redirecttestsinvalidsecret",
                        "scope": "AmbassadorTest"
                    },
                    "name": "redirecttestsinvalidsecret",
                    "namespace": "default",
                    "resourceVersion": "60760",
                    "selfLink": "/api/v1/namespaces/default/services/redirecttestsinvalidsecret",
                    "uid": "095eb703-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.101.188.175",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 30119,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 30724,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "redirecttestsinvalidsecret"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"redirecttestsinvalidsecret\",\"scope\":\"AmbassadorTest\",\"service\":\"redirecttestsinvalidsecret-admin\"},\"name\":\"redirecttestsinvalidsecret-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"redirecttestsinvalidsecret-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\" [...]
                    },
                    "creationTimestamp": "2020-01-10T16:55:42Z",
                    "labels": {
                        "kat-ambassador-id": "redirecttestsinvalidsecret",
                        "scope": "AmbassadorTest",
                        "service": "redirecttestsinvalidsecret-admin"
                    },
                    "name": "redirecttestsinvalidsecret-admin",
                    "namespace": "default",
                    "resourceVersion": "60764",
                    "selfLink": "/api/v1/namespaces/default/services/redirecttestsinvalidsecret-admin",
                    "uid": "098b63d8-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.108.51.89",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "redirecttestsinvalidsecret-admin",
                            "nodePort": 31946,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "redirecttestsinvalidsecret"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v1\nkind: Mapping\nname: tls_target_mapping\nprefix: /tls-target/\nservice: redirecttestsinvalidsecret-http\nambassador_id: redirecttestsinvalidsecret\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v1\\nkind: Mapping\\nname: tls_target_mapping\\nprefix: /tls-target/\\nservice: redirecttestsinvalidsecret-http\\nambassador_id: redirecttestsinvalidsecret\\n\"},\"labels\":{\"kat-ambassador-id\":\"redirecttestsinvalidsecret\",\"scope\":\"AmbassadorTest\"},\"name\":\"redirecttestsinvalids [...]
                    },
                    "creationTimestamp": "2020-01-10T16:55:42Z",
                    "labels": {
                        "kat-ambassador-id": "redirecttestsinvalidsecret",
                        "scope": "AmbassadorTest"
                    },
                    "name": "redirecttestsinvalidsecret-http",
                    "namespace": "default",
                    "resourceVersion": "60771",
                    "selfLink": "/api/v1/namespaces/default/services/redirecttestsinvalidsecret-http",
                    "uid": "09ccf7a3-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.103.152.90",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8118
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8481
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
